2005-07-26  Richard Levitte  <richard@levitte.org>

	* revision.cc (check_sane_history): Convert tabs to the
	appropriate amount of spaces.

2005-07-26  Richard Levitte  <richard@levitte.org>

	* sanity.hh, revision.cc (check_sane_history),
	change_set.cc (concatenate_change_sets, merge_change_sets,
	invert_change_set): Because boost currently uses the symbol M, we
	have a clash.  Therefore, let's rename M to MM, for now.

2005-07-26  Richard Levitte  <richard@levitte.org>

	* commands.cc (CMD(privkey)): Change so both the public and
	private key are printed.

	* tests/t_dropkey_2.at, tests/t_lua_privkey.at: Adapt to the new
	private key format.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc (MusingI, ~MusingI): No-op when already in the middle
	of dumping.

2005-07-25  Matthew Gregan  <kinetik@orcon.net.nz>

	* Makefile.am, configure.ac: Remove BUNDLED_{LUA,SQLITE} tests and
	clarify the comment for popt.  Using external versions of these
	tools didn't work anyway, so there's no point giving the
	impression that it might.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc (gasp): Handle the possibility of multiple valid calls
	to gasp(), 'db check' can trigger multiple invariants without
	dying.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.{hh,cc} (sanity::already_dumping, gasp): Don't let gasp
	be called recursively, in case a dump triggers an invariant.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc (gasp): Make more robust against new errors triggered
	during error unwind.  (write_change_set in particular likes to
	blow up when handling in invalid change_set.)

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (merge_change_sets, check_sane)
	(concatenate_change_sets, invert_change_set): Add M()s.

2005-07-24  Nathaniel Smith  <njs@pobox.com>

	* sanity.{hh,cc} (dump): Remove templated version, add std::string
	version.
	* vocab.{hh,cc} (dump): Add ATOMIC/DECORATE/ENCODING dumpers.