@@ -678,3 +678,4 @@ m4_include(tests/t_migrate_broken_schema.at)
 m4_include(tests/t_ls_branches.at)
 m4_include(tests/t_database_check_normalized.at)
 m4_include(tests/t_annotate_no_rev.at)
+m4_include(tests/t_merge_add_rename_add.at)
